# router/subscriber.js
@@ -3,8 +3,68 @@ const router = express.Router();
 
 const subcontroller = require('../controller/subcontroller');
 
-router.get('/', subcontroller.getAllSubscribers);
-router.get('/:id', subcontroller.getSubscriberById);
-router.post('/', subcontroller.createSubscriber);
+const routerValidation = require('../utilities/index')
+
+router.get('/',
+    async (req, res) => {
+        try{
+            await subcontroller.getAllSubscribers(req, res);
+        }catch(err){
+            res.status(500).json({ error: err.message });
+        }
+    });
+
+
+router.get('/:id',
+    routerValidation.validateIdRules(),
+    routerValidation.checkId,
+    async (req, res) => {
+        try{
+            await subcontroller.getSubscriberById(req, res);
+        }catch(err){
+            res.status(500).json({ error: err.message });
+        }
+        
+    });
+    
+
+
+router.post('/',
+    routerValidation.createSubscriberRules(),
+    routerValidation.checkCreateSubscriber,
+    async (req, res) => {
+        try{
+            await subcontroller.createSubscriber(req, res);
+        }catch(err){
+            res.status(500).json({ error: err.message });
+        }
+    });
+
+
+router.put('/:id',
+    routerValidation.updateSubscriberRules(),
+    routerValidation.checkUpdateSubscriber,
+    async (req, res) => {
+        try{
+            await subcontroller.updateSubscriber(req, res);
+        }catch(err){
+            res.status(500).json({ error: err.message });
+        }
+    });
+
+
+
+router.delete('/:id',
+    routerValidation.validateIdRules(),
+    routerValidation.checkId,
+    async (req, res) => {
+        try{
+            await subcontroller.deleteSubscriber(req, res);
+        }catch(err){
+            res.status(500).json({ error: err.message });
+        }
+    }
+);
+
 
 module.exports = router;
